--- a/assets/style.css
+++ b/assets/style.css
@@ -1,11 +1,11 @@
 body {
-  background-color: #191919;
+  background-color: #f0f0f0;
   padding: 0;
   margin: 0;
 }
 
 #presence {
-  background-color: #FAF151;
+  background-color: #f0f0f0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -14,22 +14,55 @@ body {
 
 #presence #amount {
   font-size: 100px;
+  color: #507fb3;
 }
 
-#progressBar {
-  width: 90%;
-  margin: 10px auto;
-  height: 10px;
-  background-color: #0A5F44;
+#presence #percentage {
+  font-size: 40px;
 }
 
-#progressBar div {
-  height: 100%;
+#graph {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.progress {
+  width: 70%;
+  height: 22px;
+  margin: 0;
+  background-color: transparent;
+  background-image: url("../assets/images/line.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow: visible;
+  box-shadow: none;
+}
+
+.progress-bar {
+  font-size: 12px;
+  line-height: 14px;
+  width:70%; 
   text-align: right;
-  padding: 0 10px;
-  line-height: 10px; /* same as #progressBar height if we want text middle aligned */
-  width: 0;
-  background-color: #CBEA00;
-  box-sizing: border-box;
-  font-size: 8px;
+  background-color: #507fb3;
+  height: 20%;
+  margin-top: 1.3%;
+  margin-left: 2.5%;
+}
+
+#hours {
+  list-style: none;
+  display: flex;
+  flex-flow: row;
+  justify-content: flex-start;
+  font-size: 12px;
+  padding: 0;
+  width: 70%;
+  color: #507fb3;
+}
+
+#hours .space {
+  flex-grow: 2;
 }
