--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,17 +22,24 @@ body {
 }
 
 #graph {
-  width: 100%;
+  width: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
+}
+
+#chart {
+  width: 100%;
+  transition: margin-top 1s;
 }
 
 .progress {
-  width: 70%;
+  width: 95%;
   height: 22px;
-  margin: 0;
+  margin-left: 4%;
+  margin-bottom: 20px;
   background-color: transparent;
   background-image: url("../images/line.png");
   background-repeat: no-repeat;
@@ -45,11 +52,19 @@ body {
   font-size: 12px;
   line-height: 14px;
   width:70%; 
-  text-align: right;
   background-color: #507fb3;
   height: 20%;
   margin-top: 1.3%;
   margin-left: 2.5%;
+}
+
+.progress-bar p {
+  position: relative;
+  color: #507fb3;
+  margin: 0;
+  text-align: right;
+  margin-top: -6%;
+  font-size: 20px;
 }
 
 #hours {
@@ -57,10 +72,12 @@ body {
   display: flex;
   flex-flow: row;
   justify-content: flex-start;
-  font-size: 12px;
+  font-size: 20px;
   padding: 0;
-  width: 70%;
+  width: 95%;
   color: #507fb3;
+  margin-left: 4.3%;
+  margin-bottom: 0;
 }
 
 #hours .space {
@@ -73,4 +90,16 @@ body {
   background-size: contain;
   width: 10%;
   height: 4%;
+}
+
+.close-chart {
+  margin-top: -100%;
+}
+
+.rotate {
+  transform: rotate(180deg);
+}
+
+.hide {
+  display: none;
 }
