--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,12 @@ body {
   justify-content: center;
 }
 
+.text {
+  color: #507fb3;
+  font-size: 40px;
+  margin-top: 30px;
+}
+
 #presence #amount {
   font-size: 100px;
   color: #507fb3;
@@ -102,4 +108,155 @@ body {
 
 .hide {
   display: none;
+}
+
+#info {
+  position: fixed;
+  width: 60%;
+  background-color: #e1e1e1;
+  top: 40%;
+  right: 20%;
+  border: #c2c2c2 solid 4px;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  font-size: 30px;
+  padding: 20px;
+  display: none;
+}
+
+#closebtn {
+  text-align: right;
+  margin-left: 90%;
+  width: 40px;
+  height: 40px;
+  background-image: url('../images/close_btn.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#desc {
+  list-style: none;
+}
+
+#disname {
+  margin-bottom: 15px;
+  font-size: 40px;
+  font-weight: bold;
+}
+
+#map-btns {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-evenly;
+  margin-bottom: 50px;
+}
+
+#map-btns div {
+  width: 20%;
+  height: 40px;
+  text-align: center;
+  padding: 1%;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+#btn1 {
+  background-image: url("../images/Moldova.jpg");
+}
+
+#btn2 {
+  background-image: url("../images/chisinau.jpg");
+}
+
+#btn3 {
+  background-image: url("../images/Diaspora.jpg");
+}
+
+#results {
+  border-top: #c2c2c2 solid 3px;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-evenly;
+}
+
+#search {
+  margin: 30px 0;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image: url("../images/Searchbar.png");
+  height: 40px;
+  background-position: center;
+}
+
+#header {
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image: url("../images/header.jpg");
+  height: 100px;
+  width: 100%;
+  background-position: center;
+}
+
+#buttons {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-evenly;
+  margin-bottom: 50px;
+}
+
+#buttons div {
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: 60px;
+  width: 300px;
+}
+
+#res-uni {
+  background-image: url("../images/rezultatevotuninominal.jpg");
+}
+
+#res-pro {
+  background-image: url("../images/rezultatevorproportional.jpg");
+}
+
+#choose {
+  display: flex;
+}
+
+.but {
+  margin-left: 100px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: 60px;
+  width: 300px;
+  background-image: url("../images/alegecircumscriptia.jpg");
+}
+
+#people {
+  margin: 30px 0;
+  width: 100%;
+}
+
+#find, #partids {
+  position: fixed;
+  height: 70%;
+  width: 100%;
+  bottom: 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#find {
+  background-image: url("../images/Alege\ Circumpscriptie_tab_long.png");
+}
+
+#partids {
+  background-image: url("../images/rezultatepartide.png");
+  height: 80%;
 }
